2008-08-04 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (read_extended_info): fixed valgrind
	  warning. Thanks to Andrea.

	* src/repository.c (sync_playlist_mode_automatic_toggled): fixed
	  memory leak. Thanks to Andrea.

	  (repwin_free): fixed memory leak. Thanks to Andrea.

	* src/mp3file.c (mp3_read_lame_tag, mp3_get_track_gapless,
	  mp3_get_track_lame_replaygain, set_uncommon_tag): fixed possible
	  compiler warnings.

	  (mp3_read_lame_tag, mp3_read_gapless): fixed memory
	  leaks. Thanks to Andrea.

	* src/mp3file.[ch]: Added "const" qualifier to filename arguments.

	* src/file.c (add_coverart): fixed memory leak. Thanks to Andrea.

	* src/details.c (details_get_item): fixed memory leak. Thanks to
	  Andrea.

	* src/prefs.c (get_list_from_buffer): fixed memory leaks.

	* src/prefsdlg.c (on_unsetdeps_checkbox_toggled): fixed memory
	  leak.

	* src/prefsdlg.c (on_commands_clicked, on_cmd_aacgain_file_set):
	  variable for aacgain was defined as "aacgain_path" instead of
	  "path_aacgain".

	* src/prefsdlg.c
	  data/gtkpod.glade:
	  Fix usability problems in prefs dialog (Music->Commands).

	* src/file_convert.c
	  data/gtkpod.glade:
	  The widget name "conversion_log" was used twice, but for some
	  reason this didn't cause problems until glade-3 re-wrote the
	  file. Fixed by using different name for the menu item.

2008-08-16 Paul Richardson <phantom_sf at users.sourceforge.net>

	* src/display.c: memory leak fix in display_image_dialog. Thanks to
	  Tomas Carnecky for the patch.  

2008-08-04 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/sort_window.c: fix bug that selected sort column (for track
	  view) was displayed incorrectly. Make handling of "no sorting"
	  more intuitive.

	* data/gtkpod.glade: small bugfix (radio button group for track
	  display sort order was not set up correctly)

2008-08-03 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_itdb.c (gp_replace_itdb): fix memory leak. Thanks to